# ddsp-piano

./: .cursorrules  .editorconfig  .flake8  .gitignore  .isort.cfg  API.md  ASSESSMENT_FOR_BANKERS.md  BENCHMARKS.md  BUSINESS.md  BUSINESS_REVIEW_SUMMARY.md  CATEGORIZED_LISTS.txt  CODE_OF_CONDUCT.md  COMMUNITY_TOOLS_LIST.txt  CONTRIBUTING.md  CURSOR_AI_GUIDE.md  CURSOR_AI_PROMPTS_COMPLETE.md  DEPLOYMENT.md  DISTRIBUTION_PRODUCTS_SUMMARY.md  DOCUMENTATION_LIST.txt  EXECUTIVE_BRIEF.md  FINANCIAL_LIST.txt  FINANCIAL_PRODUCTS_SUMMARY.md  GITHUB_AUTOMATION_RESULTS.md  GITHUB_IMPROVEMENTS_SUMMARY.md  GITHUB_LISTS_CHECKLIST.txt  GITHUB_LISTS_GUIDE.md  GITHUB_LISTS_QUICK_REFERENCE.md  GITHUB_REPOSITORIES_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INSTRUCTIONS_10_REPOS.md  LISTS_ORGANIZATION_SUMMARY.txt  MUSIC_LIST.txt  NEXT_STEPS_GITHUB.md  ORACLE_ACQUISITION_TOOLS.md  ORACLE_DISRUPTION_PRODUCTS.md  ORACLE_DISRUPTION_STRATEGY.md  ORACLE_TOOLS_ACTION_PLAN.md  ORACLE_TOOLS_PORTFOLIO.md  ORACLE_TOOLS_SUMMARY.md  OTHER_PROJECTS_LIST.txt  (+72 more)
agentic-automation-platform/: .gitignore  CODE_VALIDATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION.md  pyproject.toml  requirements.txt  test_code_validation.py
agentic-automation-platform/agentic_automation/: __init__.py  orchestrator.py
agentic-automation-platform/agentic_automation/api/: __init__.py  server.py
agentic-automation-platform/agentic_automation/cli/: __init__.py  app.py
agentic-automation-platform/agentic_automation/core/: __init__.py  agent.py  agent_parser.py  agent_pool.py  circuit_breaker.py  event_bus.py  models.py  rate_limiter.py  state_store.py  workflow.py
agentic-automation-platform/agentic_automation/integrations/: __init__.py  base.py  github.py
agentic-automation-platform/agentic_automation/llm/: __init__.py  base.py  openai_backend.py
agentic-automation-platform/agentic_automation/memory/: __init__.py  memory_manager.py
agentic-automation-platform/agentic_automation/observability/: __init__.py  logger.py  metrics.py  tracer.py
agentic-automation-platform/agentic_automation/testing/: __init__.py  fixtures.py  (+1 more)
agentic-automation-platform/docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  SCENARIOS_VALIDATION.md
agentic-automation-platform/examples/: README.md  agent_definition.yaml  multi_agent_workflow.yaml  simple_workflow.yaml
agentic-automation-platform/tests/: __init__.py  test_agent.py
(+307 files in other folders)
